// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog should match snapshot - data 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <img
      alt="1"
      src="/link"
    />
    <h3
      class="MuiTypography-root MuiTypography-h3"
    >
      1
    </h3>
    <div
      class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiCardActionArea-root"
        href="/undefined/1"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiCardMedia-root"
          style="background-image: url(https://wut-vtrips.herokuapp.comundefined);"
        />
        <div
          class="MuiCardContent-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
          />
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
          />
        </div>
        <span
          class="MuiCardActionArea-focusHighlight"
        />
        <span
          class="MuiTouchRipple-root"
        />
      </a>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
          href="/undefined/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            Czytaj dalej
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Blog should match snapshot - isError 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div>
      Nie można załadować kategorii
    </div>
  </div>
</div>
`;

exports[`Blog should match snapshot - isLoading 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
      style="width: 210px; height: 118px;"
    />
    <img />
    <h3
      class="MuiTypography-root MuiTypography-h3"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-wave"
      style="width: 40px; height: 40px;"
    />
  </div>
</div>
`;
